--- a/static/trustly/css/pages/user/interactive/cs-search.css
+++ b/static/trustly/css/pages/user/interactive/cs-search.css
@@ -39,6 +39,7 @@ html {
 
   .search__results {
     width: 100vw !important;
+    padding-bottom: 0px;
   }
 
   .search {
